# rushit-portfolio

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
latex/: resume.tex
src/: main.rs
static/css/: style.css
templates/: index.html.tera
