[package]
name = "rushit-portfolio"
version = "0.1.0"
authors = ["Rushit Shah <rushshaw9@gmail.com>"]
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "rushit-portfolio"
path = "src/main.rs"